admin管理画面　Youtube削除機能を実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,7 @@
- ja:
-   errors:
+ja:
+  errors:
     messages:
       too_short: は%{count}文字以上で入力してください
+  defaults:
+    flash_message:
+      deleted: "%{item}を削除しました。"
